✨ feat: Add album api
