# api/src/controller/MusixmatchController.ts
@@ -1,23 +1,26 @@
-
 import { NextFunction, Request, Response } from "express";
 import {
-  getCountryCodeList, getLastTenAlbumsByArtist,
+  getCountryCodeList,
+  getLastTenAlbumsByArtist,
   getLastTenArtistsByCountryCode,
 } from "../service/musixmatch.service";
-
 
 export const getCountryCodeListHandler = async (
   req: Request,
   res: Response,
   next: NextFunction
 ) => {
-  const result = await getCountryCodeList();
-  res.status(200).json({
-    status: "success",
-    data: {
-      result,
-    },
-  });
+  try {
+    const result = await getCountryCodeList();
+    res.status(200).json({
+      status: "success",
+      data: {
+        result,
+      },
+    });
+  } catch (err: any) {
+    next(err);
+  }
 };
 
 export const getLastTenArtistsByCountryCodeHandler = async (
@@ -25,10 +28,8 @@ export const getLastTenArtistsByCountryCodeHandler = async (
   res: Response,
   next: NextFunction
 ) => {
-
-  const countryCode = req.params.countryCode;
-  
   try {
+    const countryCode = req.params.countryCode;
     const result = await getLastTenArtistsByCountryCode(`${countryCode}`);
     res.status(200).json({
       status: "success",
@@ -46,9 +47,8 @@ export const getLastTenAlbumsByArtistHandler = async (
   res: Response,
   next: NextFunction
 ) => {
-  const artistId = req.params.artistId;
-
   try {
+    const artistId = req.params.artistId;
     const result = await getLastTenAlbumsByArtist(Number(artistId));
     res.status(200).json({
       status: "success",
